--- a/Ansible-manifest/ansible-setup/jenkins-slave-setup.yaml
+++ b/Ansible-manifest/ansible-setup/jenkins-slave-setup.yaml
@@ -25,3 +25,13 @@
         src: /opt/apache-maven-3.9.5-bin.tar.gz
         dest: /opt
         remote_src: yes
+
+    - name: Install docker
+      apt:
+        name: docker.io
+        state: present
+
+    - name: start docker servies
+      service:
+        name: docker
+        state: started
